syntax = "proto3";
package minievm.evm.v1;

import "gogoproto/gogo.proto";
import "minievm/evm/v1/types.proto";

option go_package = "github.com/initia-labs/minievm/x/evm/types";

// GenesisState defines the evm module's genesis state.
message GenesisState {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  // vm kv store
  repeated GenesisKeyValue key_values = 2 [
    (gogoproto.moretags) = "yaml:\"key_values\"",
    (gogoproto.nullable) = false
  ];

  // erc20 contracts
  repeated bytes erc20s = 3 [
    (gogoproto.moretags) = "yaml:\"erc20s\"",
    (gogoproto.customname) = "ERC20s"
  ];

  // erc20 stores
  repeated GenesisERC20Stores erc20_stores = 4 [
    (gogoproto.moretags) = "yaml:\"erc20_stores\"",
    (gogoproto.nullable) = false
  ];

  repeated GenesisDenomTrace denom_traces = 5 [
    (gogoproto.moretags) = "yaml:\"denom_traces\"",
    (gogoproto.nullable) = false
  ];

  repeated GenesisClassTrace class_traces = 6 [
    (gogoproto.moretags) = "yaml:\"class_traces\"",
    (gogoproto.nullable) = false
  ];

  repeated GenesisEVMBlockHash evm_block_hashes = 7 [
    (gogoproto.moretags) = "yaml:\"evm_block_hashes\"",
    (gogoproto.customname) = "EVMBlockHashes",
    (gogoproto.nullable) = false
  ];

  // erc20 factory contract address
  bytes erc20_factory = 8;

  // erc20 wrapper contract address
  bytes erc20_wrapper = 9;
}

// GenesisKeyValue defines store KV values.
message GenesisKeyValue {
  bytes key = 1;
  bytes value = 2;
}

// GenesisERC20Stores defines erc20 contract addresses of an account.
message GenesisERC20Stores {
  bytes address = 1;
  repeated bytes stores = 2;
}

// GenesisDenomTrace defines erc20 contract address of denom.
message GenesisDenomTrace {
  string denom = 1;
  bytes contract_address = 2;
}

message GenesisClassTrace {
  string class_id = 1;
  bytes contract_address = 2;
  string uri = 3;
}

message GenesisEVMBlockHash {
  bytes hash = 1;
  uint64 height = 2;
}
